[package]
name = "aoc_2019"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

[lib]
name = "aoc_2019"
path = "src/lib.rs"

[[bin]]
name = "arcade_game"
path = "src/arcade_game_bin.rs"
required-features = ["arcade_game"]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
failure = "0.1.6"
itertools = "0.8.2"
num = "0.2.0"
nalgebra = "0.19.0"
regex = "1.3.1"
num-traits = "0.2.10"
ggez = { version = "0.5.1", optional = true }
mint = { version = "0.5.4", optional = true }
dotenv = "0.15.0"
pretty_env_logger = "0.3.1"
log = "0.4.8"

[features]
default = ['arcade_game']
arcade_game = ["ggez", "mint"]

